lib/src/ffi/y_dart_bindings_generated.dart


  late final _strtouqPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedLongLong Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int)>>('strtouq');
  late final _strtouq = _strtouqPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  /// getsubopt(3) external variable
  late final ffi.Pointer<ffi.Pointer<ffi.Char>> _suboptarg =
      _lookup<ffi.Pointer<ffi.Char>>('suboptarg');

  ffi.Pointer<ffi.Char> get suboptarg => _suboptarg.value;

  set suboptarg(ffi.Pointer<ffi.Char> value) => _suboptarg.value = value;

  /// Returns default ceonfiguration for `YOptions`.
  YOptions yoptions() {
    return _yoptions();
  }

  late final _yoptionsPtr =
      _lookup<ffi.NativeFunction<YOptions Function()>>('yoptions');
  late final _yoptions = _yoptionsPtr.asFunction<YOptions Function()>();

  /// Releases all memory-allocated resources bound to given document.
  void ydoc_destroy(
    ffi.Pointer<YDoc> value,
  ) {
    return _ydoc_destroy(
      value,
    );
  }

  late final _ydoc_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YDoc>)>>(
          'ydoc_destroy');
  late final _ydoc_destroy =
      _ydoc_destroyPtr.asFunction<void Function(ffi.Pointer<YDoc>)>();

  /// Frees all memory-allocated resources bound to a given [YMapEntry].
  void ymap_entry_destroy(
    ffi.Pointer<YMapEntry> value,
  ) {
    return _ymap_entry_destroy(
      value,
    );
  }

  late final _ymap_entry_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YMapEntry>)>>(
          'ymap_entry_destroy');
  late final _ymap_entry_destroy = _ymap_entry_destroyPtr
      .asFunction<void Function(ffi.Pointer<YMapEntry>)>();

  /// Frees all memory-allocated resources bound to a given [YXmlAttr].
  void yxmlattr_destroy(
    ffi.Pointer<YXmlAttr> attr,
  ) {
    return _yxmlattr_destroy(
      attr,
    );
  }

  late final _yxmlattr_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YXmlAttr>)>>(
          'yxmlattr_destroy');
  late final _yxmlattr_destroy =
      _yxmlattr_destroyPtr.asFunction<void Function(ffi.Pointer<YXmlAttr>)>();

  /// Frees all memory-allocated resources bound to a given UTF-8 null-terminated string returned from
  /// Yrs document API. Yrs strings don't use libc malloc, so calling `free()` on them will fault.
  void ystring_destroy(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _ystring_destroy(
      str,
    );
  }

  late final _ystring_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'ystring_destroy');
  late final _ystring_destroy =
      _ystring_destroyPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<YBinaryDestroyInput> ybinary_destroy_struct() {
    return _ybinary_destroy_struct();
  }

  late final _ybinary_destroy_structPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<YBinaryDestroyInput> Function()>>(
          'ybinary_destroy_struct');
  late final _ybinary_destroy_struct = _ybinary_destroy_structPtr
      .asFunction<ffi.Pointer<YBinaryDestroyInput> Function()>();

  void ybinary_destroy_from_struct(
    ffi.Pointer<YBinaryDestroyInput> input,
  ) {
    return _ybinary_destroy_from_struct(
      input,
    );
  }

  late final _ybinary_destroy_from_structPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<YBinaryDestroyInput>)>>(
      'ybinary_destroy_from_struct');
  late final _ybinary_destroy_from_struct = _ybinary_destroy_from_structPtr
      .asFunction<void Function(ffi.Pointer<YBinaryDestroyInput>)>();

  /// Frees all memory-allocated resources bound to a given binary returned from Yrs document API.
  /// Unlike strings binaries are not null-terminated and can contain null characters inside,
  /// therefore a size of memory to be released must be explicitly provided.
  /// Yrs binaries don't use libc malloc, so calling `free()` on them will fault.
  void ybinary_destroy(
    ffi.Pointer<ffi.Char> ptr,
    int len,
  ) {
    return _ybinary_destroy(
      ptr,
      len,
    );
  }

  late final _ybinary_destroyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Uint32)>>('ybinary_destroy');
  late final _ybinary_destroy = _ybinary_destroyPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>, int)>();

  /// Creates a new [Doc] instance with a randomized unique client identifier.
  ///
  /// Use [ydoc_destroy] in order to release created [Doc] resources.
  ffi.Pointer<YDoc> ydoc_new() {
    return _ydoc_new();
  }

  late final _ydoc_newPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<YDoc> Function()>>('ydoc_new');
  late final _ydoc_new =
      _ydoc_newPtr.asFunction<ffi.Pointer<YDoc> Function()>();

  /// Creates a shallow clone of a provided `doc` - it's realized by increasing the ref-count
  /// value of the document. In result both input and output documents point to the same instance.
  ///
  /// Documents created this way can be destroyed via [ydoc_destroy] - keep in mind, that the memory
  /// will still be persisted until all strong references are dropped.
  ffi.Pointer<YDoc> ydoc_clone(
    ffi.Pointer<YDoc> doc,
  ) {
    return _ydoc_clone(
      doc,
    );
  }

  late final _ydoc_clonePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<YDoc> Function(ffi.Pointer<YDoc>)>>(
      'ydoc_clone');
  late final _ydoc_clone = _ydoc_clonePtr
      .asFunction<ffi.Pointer<YDoc> Function(ffi.Pointer<YDoc>)>();

  /// Creates a new [Doc] instance with a specified `options`.
  ///
  /// Use [ydoc_destroy] in order to release created [Doc] resources.
  ffi.Pointer<YDoc> ydoc_new_with_options(
    YOptions options,
  ) {
    return _ydoc_new_with_options(
      options,
    );
  }

  late final _ydoc_new_with_optionsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<YDoc> Function(YOptions)>>(
          'ydoc_new_with_options');
  late final _ydoc_new_with_options = _ydoc_new_with_optionsPtr
      .asFunction<ffi.Pointer<YDoc> Function(YOptions)>();

  /// Returns a unique client identifier of this [Doc] instance.
  int ydoc_id(
    ffi.Pointer<YDoc> doc,
  ) {
    return _ydoc_id(
      doc,
    );
  }

  late final _ydoc_idPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<YDoc>)>>(
          'ydoc_id');
  late final _ydoc_id =
      _ydoc_idPtr.asFunction<int Function(ffi.Pointer<YDoc>)>();

  /// Returns a unique document identifier of this [Doc] instance.
  ///
  /// Generated string resources should be released using [ystring_destroy] function.
  ffi.Pointer<ffi.Char> ydoc_guid(
    ffi.Pointer<YDoc> doc,
  ) {
    return _ydoc_guid(
      doc,
    );
  }

  late final _ydoc_guidPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<YDoc>)>>('ydoc_guid');
  late final _ydoc_guid = _ydoc_guidPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<YDoc>)>();

  /// Returns a collection identifier of this [Doc] instance.
  /// If none was defined, a `NULL` will be returned.
  ///
  /// Generated string resources should be released using [ystring_destroy] function.
  ffi.Pointer<ffi.Char> ydoc_collection_id(
    ffi.Pointer<YDoc> doc,
  ) {
    return _ydoc_collection_id(
      doc,
    );
  }

  late final _ydoc_collection_idPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<YDoc>)>>(
      'ydoc_collection_id');
  late final _ydoc_collection_id = _ydoc_collection_idPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<YDoc>)>();

  /// Returns status of should_load flag of this [Doc] instance, informing parent [Doc] if this
  /// document instance requested a data load.
  int ydoc_should_load(
    ffi.Pointer<YDoc> doc,
  ) {
    return _ydoc_should_load(
      doc,
    );
  }

  late final _ydoc_should_loadPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(ffi.Pointer<YDoc>)>>(
          'ydoc_should_load');
  late final _ydoc_should_load =
      _ydoc_should_loadPtr.asFunction<int Function(ffi.Pointer<YDoc>)>();

  /// Returns status of auto_load flag of this [Doc] instance. Auto loaded sub-documents automatically
  /// send a load request to their parent documents.
  int ydoc_auto_load(
    ffi.Pointer<YDoc> doc,
  ) {
    return _ydoc_auto_load(
      doc,
    );
  }

  late final _ydoc_auto_loadPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(ffi.Pointer<YDoc>)>>(
          'ydoc_auto_load');
  late final _ydoc_auto_load =
      _ydoc_auto_loadPtr.asFunction<int Function(ffi.Pointer<YDoc>)>();

  ffi.Pointer<YSubscription> ydoc_observe_updates_v1(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<ffi.Void> state,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(
                    ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Pointer<ffi.Char>)>>
        cb,
  ) {
    return _ydoc_observe_updates_v1(
      doc,
      state,
      cb,
    );
  }

  late final _ydoc_observe_updates_v1Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<YSubscription> Function(
                  ffi.Pointer<YDoc>,
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<
                      ffi.NativeFunction<
                          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
                              ffi.Pointer<ffi.Char>)>>)>>(
      'ydoc_observe_updates_v1');
  late final _ydoc_observe_updates_v1 = _ydoc_observe_updates_v1Ptr.asFunction<
      ffi.Pointer<YSubscription> Function(
          ffi.Pointer<YDoc>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
                      ffi.Pointer<ffi.Char>)>>)>();

  ffi.Pointer<YSubscription> ydoc_observe_updates_v2(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<ffi.Void> state,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(
                    ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Pointer<ffi.Char>)>>
        cb,
  ) {
    return _ydoc_observe_updates_v2(
      doc,
      state,
      cb,
    );
  }

  late final _ydoc_observe_updates_v2Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<YSubscription> Function(
                  ffi.Pointer<YDoc>,
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<
                      ffi.NativeFunction<
                          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
                              ffi.Pointer<ffi.Char>)>>)>>(
      'ydoc_observe_updates_v2');
  late final _ydoc_observe_updates_v2 = _ydoc_observe_updates_v2Ptr.asFunction<
      ffi.Pointer<YSubscription> Function(
          ffi.Pointer<YDoc>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
                      ffi.Pointer<ffi.Char>)>>)>();

  ffi.Pointer<YSubscription> ydoc_observe_after_transaction(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<ffi.Void> state,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<ffi.Void>,
                    ffi.Pointer<YAfterTransactionEvent>)>>
        cb,
  ) {
    return _ydoc_observe_after_transaction(
      doc,
      state,
      cb,
    );
  }
